fuzz_linearizer: fix uops and add to test.yml (#3588)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -303,6 +303,9 @@ jobs:
       run: METAL=1 DEBUG=3 python test/test_ops.py TestOps.test_big_gemm
     - name: Test LLaMA compile speed
       run: PYTHONPATH="." METAL=1 python test/external/external_test_speed_llama.py
+    - name: Fuzz Test linearizer
+      run: PYTHONPATH="." METAL=1 CACHELEVEL=0 FUZZ_BEAM=1 DEPTH=2 FUZZ_N=48 FUZZ_MAX_SIZE=10000000 python test/external/fuzz_linearizer.py
+
 
 #  testwebgl:
 #    name: WebGL Tests
