--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -228,6 +228,9 @@ jobs:
       - if: ${{ matrix.task == 'onnx' }}
         name: Test MLPerf optimizers
         run: GPU=1 python -m pytest -n=auto test/external/external_test_optim.py --durations=20
+      - if: ${{ matrix.task == 'onnx' }}
+        name: Test THREEFRY
+        run: PYTHONPATH=. THREEFRY=1 GPU=1 python3 -m pytest test/test_randomness.py test/test_jit.py
 
   #testwebgpu:
   #  name: WebGPU Tests
